Fixed picture background color on smaller screen sizes.

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ a {
 .navbar a::after {
   content: "";
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: -5px;
   background-color: blue;
   height: 50%;
@@ -73,8 +73,8 @@ a {
   z-index: 10;
   font-size: 1.5rem;
   transform: rotate(90deg);
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
   cursor: pointer;
   transition: transform 200ms ease-in-out;
 }
@@ -152,7 +152,6 @@ a {
 .about {
   grid-area: 2 / 1 / 3 / 5;
   padding: 3rem;
-  text-align: justify;
 }
 
 .about h2 {
@@ -168,7 +167,7 @@ a {
 .face {
   grid-area: 2 / 5 / 3 / 7;
   width: auto;
-  margin: auto;
+  text-align: center;
   height: 100%;
 }
 
@@ -344,6 +343,7 @@ a {
   }
   .face {
     grid-area: 2 / 1 / 3 / 7;
+    background-color: rgb(150, 225, 255);
   }
   .about {
     grid-area: 3 / 1 / 4 / 7;
